[gd_scene load_steps=6 format=3 uid="uid://biidgbrjjlcjo"]

[ext_resource type="Script" uid="uid://c10ayculwitir" path="res://UI/options.gd" id="1_b7fs8"]
[ext_resource type="FontFile" uid="uid://bghobknr5egpl" path="res://assets/Fonts/Montjuic.ttf" id="2_m8fpw"]
[ext_resource type="Texture2D" uid="uid://c1nm1h0mwv76y" path="res://assets/Art/button_9patch.png" id="3_ixc72"]
[ext_resource type="LabelSettings" uid="uid://crmxhf77knfiu" path="res://assets/Fonts/UI_Font_Basic.tres" id="4_q8egh"]

[sub_resource type="LabelSettings" id="LabelSettings_ixc72"]
font = ExtResource("2_m8fpw")
font_size = 40

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7fs8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219806, 0.22005, 0.233662, 0.705882)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music"
label_settings = SubResource("LabelSettings_ixc72")

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX"
label_settings = SubResource("LabelSettings_ixc72")

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackButton" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 0
texture = ExtResource("3_ixc72")
region_rect = Rect2(0, 0, 50, 50)
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 17
patch_margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.5
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"
label_settings = ExtResource("4_q8egh")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_gui_input"]
